Report, String, Java9, JVM, Memory Leak, OOM, Out of memory, Performance Tuning
2020 Java Technology Report https://www.jrebel.com/blog/2020-java-technology-report

How much memory does a string use in Java 8? https://stackoverflow.com/questions/31206851/how-much-memory-does-a-string-use-in-java-8
Guide to Java String Pool https://www.baeldung.com/java-string-pool
How to save memory occupied by Java strings https://www.javamex.com/tutorials/memory/string_saving_memory.shtml
JVM Anatomy Quark #10: String.intern() https://shipilev.net/jvm/anatomy-quarks/10-string-intern
JEP 192: String Deduplication in G1 http://openjdk.java.net/jeps/192
Why does storing a long string cause an OOM error but a breaking it into a list of short strings does not? https://stackoverflow.com/questions/45406035/why-does-storing-a-long-string-cause-an-oom-error-but-a-breaking-it-into-a-list

How to Migrate to Java 9? It’s Easy if You Do It Smart https://www.romexsoft.com/blog/migrate-to-java-9

JVM Anatomy Quarks https://shipilev.net/jvm/anatomy-quarks 한 권의 책
Why does my Java process consume more memory than Xmx? https://plumbr.io/blog/memory-leaks/why-does-my-java-process-consume-more-memory-than-xmx
Java gc log 분석, 시각화하는 무료 사이트 추천 gceasy.io https://blog.voidmainvoid.net/213
JVM char array occupies lots of memory https://stackoverflow.com/questions/43701490/jvm-char-array-occupies-lots-of-memory
Java GC Tuning for Noobs: Part 1 http://onemogin.com/java/gc/java-gc-tuning-for-noobs-1.html
Java GC Tuning for Noobs: Part 2, Generational http://onemogin.com/java/gc/java-gc-tuning-generational.html
Java GC Tuning for Noobs: Part 3, Parallelism http://onemogin.com/java/gc/java-gc-cms.html
TIL-12: Garbage Collection: Young vs Old Generations https://medium.com/@recepinancc/til-12-garbage-collection-young-vs-old-generations-ab95b6a68653
java option --add-exports deprecated된 pakcage를 사용하는 방법 https://medium.com/@strncpy/java-option-add-exports-1f63c81a54a4
Is memory allocation on the JVM lockless https: